--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -70,7 +70,7 @@
             <span>
               <img src="/images/plus-24.svg" alt="Novo Job" /> 
             </span>
-            Adicionar novo job
+            Adicionar novo job!
           </a>
         </section>
       </div>
